--- a/tauclubs/src/App.css
+++ b/tauclubs/src/App.css
@@ -1,20 +1,21 @@
 .App {
-  text-align: center;
+  text-align:center;
 }
 
-.App-logo {
+/*.App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+}*/
 
+/*
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+}*/
 
 .App-header {
-  background-color: #282c34;
+  background-color: #52ade5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,6 +29,7 @@
   color: #61dafb;
 }
 
+/*
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
