--- a/tauclubs/src/App.css
+++ b/tauclubs/src/App.css
@@ -146,3 +146,39 @@ article{
 	position:relative;
 	top:1px;
 }
+
+.clubInfo {
+  background-color: #cff6f4;
+  height: 70vh;
+  border: 1px solid #d2d2d2;
+  border-radius: 3px;
+}
+
+.clubInfo .clubName {
+  font-family: Cambria;
+  text-align:center;
+  font-size: 40px;
+  padding: 0 1em 1em 1em;
+  /* padding: 1em; */
+  font-weight: 600;
+}
+
+.clubInfo .clubDescription {
+  font-family: Cambria;
+  text-align: center;
+  font-size: 20px;
+  padding: 0 1em 3em 1em;
+  font-weight: 400;
+}
+
+.postList {
+  background-color: #e1e0e0;
+  height: 70vh;
+  border: 1px solid #d2d2d2;
+  border-radius: 3px;
+  width: 100%;
+}
+
+.container {
+  max-width: 1330px;
+}
