first steps of connection between backend and frontend

--- a/tauclubs/src/App.css
+++ b/tauclubs/src/App.css
@@ -182,3 +182,15 @@ article{
 .container {
   max-width: 1330px;
 }
+
+.icon {
+  margin-left: 30px;
+}
+
+.icon i{
+  font-size: 1.5rem;
+}
+
+.icon span{
+  font-size: 20px;
+}
