--- a/tauclubs/src/App.css
+++ b/tauclubs/src/App.css
@@ -122,6 +122,12 @@ article {
   font-size: 70px;
   padding: 1em;
 }
+b1{
+  float:right;
+  Margin-left:10px;
+  padding-right: 55px;
+  
+}
 
 .myButton {
   box-shadow: 0px 10px 14px -7px #276873;
@@ -131,12 +137,13 @@ article {
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-family: Arial;
+  font-family: Cambria;
   font-size: 20px;
   font-weight: bold;
   padding: 13px 32px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #3d768a;
+  
 }
 .myButton:hover {
   background: linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
