--- a/tauclubs/src/App.css
+++ b/tauclubs/src/App.css
@@ -203,3 +203,37 @@ article {
 .icon span {
   font-size: 20px;
 }
+
+
+.EventInfo {
+  background-color: #cff6f4;
+  height: 70vh;
+  border: 1px solid #d2d2d2;
+  border-radius: 3px;
+}
+
+.EventInfo .userName {
+  font-family: Cambria;
+  text-align: center;
+  font-size: 40px;
+  padding: 0 1em 1em 1em;
+  /* padding: 1em; */
+  font-weight: 600;
+}
+
+.EventInfo .userDescription {
+  font-family: Cambria;
+  text-align: center;
+  font-size: 20px;
+  padding: 0 1em 3em 1em;
+  font-weight: 400;
+}
+
+.EventInfo .Follow {
+  font-family: Cambria;
+  text-align: center;
+  font-size: 40px;
+  padding: 0 1em 1em 1em;
+  /* padding: 1em; */
+  font-weight: 600;
+}
