--- a/tauclubs/src/App.css
+++ b/tauclubs/src/App.css
@@ -214,7 +214,8 @@ b1{
 
 .EventInfo {
   background-color: #cff6f4;
-  height: 70vh;
+  height: 30vh;
+  padding-bottom: 4;
   border: 1px solid #d2d2d2;
   border-radius: 3px;
 }
@@ -222,7 +223,7 @@ b1{
 .EventInfo .userName {
   font-family: Cambria;
   text-align: center;
-  font-size: 40px;
+  font-size: 25px;
   padding: 0 1em 1em 1em;
   /* padding: 1em; */
   font-weight: 600;
@@ -231,7 +232,7 @@ b1{
 .EventInfo .userDescription {
   font-family: Cambria;
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
   padding: 0 1em 3em 1em;
   font-weight: 400;
 }
@@ -239,7 +240,7 @@ b1{
 .EventInfo .Follow {
   font-family: Cambria;
   text-align: center;
-  font-size: 40px;
+  font-size: 25px;
   padding: 0 1em 1em 1em;
   /* padding: 1em; */
   font-weight: 600;
